--- a/content/foxes/1.md
+++ b/content/foxes/1.md
@@ -1,4 +1,3 @@
 Terms like ‘digital’, ‘user-centric’ and ‘design thinking’ are as ubiquitous as they are misunderstood. They are used frequently in the business and innovation spheres, with little thought to what the practices actually entail or how to achieve the outcomes for clients and customers that they promise. This book provides excellent examples and case studies demonstrating what works, and the way to apply this to your future endeavours. It goes back to basics so that practitioners have an easily digestible guide to truly enacting the age-old adage, putting the customer first.
 
-**Jade Demnar**<br>
-_Change Management Consultant, Accenture_
+**Jade Demnar, Change Management Consultant, Accenture**
