--- a/content/foxes/2.md
+++ b/content/foxes/2.md
@@ -1,5 +1,4 @@
 This book provides an excellent reminder that engagement without emotional response is pointless; that as marketers and business leaders we need to constantly remind ourselves that it’s our customer’s emotions that drive response triggers that result in revenue, affinity, loyalty and amplification. In this increasingly complex world this book illustrates perfectly that we must not tempted by shiny objects and channel trends and stay focused on designing engagement programmes with the customer at the centre.
 
 
-**Lee Hawksley**<br>
-_Senior Vice President, APAC, Salesforce.com_
+**Lee Hawksley, Senior Vice President, APAC, Salesforce.com**
