--- a/content/foxes/5.md
+++ b/content/foxes/5.md
@@ -1,4 +1,3 @@
 Affected distils the complexity of emotions through contemporary examples and provides practical guidance for business leaders in the digital age—a must read for all who have customers.
 
-**Cees de Bont**<br>
-_Dean of the School of Design, Hong Kong Polytechnic University_
+**Cees de Bont, Dean of the School of Design, Hong Kong Polytechnic University**
