--- a/content/foxes/6.md
+++ b/content/foxes/6.md
@@ -1,4 +1,3 @@
 Bringing together emotion theory, design thinking and business strategy into one accessible guide for the emotionally astute leader. Or those who want to be. If organizational EQ is the next revolution, Affected is its first blueprint.
 
-**Rami Banna**<br>
-_Product Manager, Google, Palo Alto, California_
+**Rami Banna, Product Manager, Google, Palo Alto, California**
