--- a/content/foxes/3.md
+++ b/content/foxes/3.md
@@ -5,5 +5,4 @@ title = ""
 For companies seeking a winning strategy in the digital age, Wrigley and Straker lay out a masterful plan and business case to move beyond customer design to a responsive experience that understands and adapts to customer emotion to create a meaningful connection with brands.
 
 
-**Trent Lund**<br>
-_Head of Innovation and Ventures, PwC_
+**Trent Lund, Head of Innovation and Ventures, PwC**
